--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,23 @@
-name: Hello World!
-
-on:
-  push:
-    branches:
-      - master
-
+name: GitHub Actions Demo
+on: [push]
 jobs:
-  hello_world_job:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Say hello
-        run: |
-          echo "Hello World!"
-      - name: Now it is
-        run: |
-          date
+Explore-GitHub-Actions:
+runs-on: ubuntu-latest
+steps:
+- run: echo "🎉 The job was automatically triggered by a
+${{github.event_name }} event."
+- run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted
+by GitHub!"
+- run: echo "🔎 The name of your branch is ${{ github.ref }} and your
+repository is ${{ github.repository }}."
+- name: Check out repository code
+uses: actions/checkout@v4
+
+- run: echo "💡 The ${{ github.repository }} repository has been cloned to
+the runner."
+- run: echo "🖥 The workflow is now ready to test your code on the runner."
+- name: List files in the repository
+run: |
+ls ${{ github.workspace }}
+- run: echo "🍏 This job's status is ${{ job.status }}."
 
